--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   				<li class="header__address__item header__address__item-email"><script>
   					document.write( ['com', 'qq', '522310244'].reverse().join('.').replace('.', '@') );
   				</script></li>
-  				<li class="header__address__item header__address__item-blog">
+  				<!-- <li class="header__address__item header__address__item-blog">
   					<a class="button">个人博客正在搭建中....</a>
-  				</li>
+  				</li> -->
   			</ul>
   		</address>
   	</div>
@@ -42,7 +42,7 @@
     <section class="section">
 		  <div class="boundary">
 			<header class="section__header">
-				<h2 class="section__header__title">精通前端，略懂后端 <span style="font-size:13px;">(如有后端硬性需求，可忽略不计)</span></h2>
+				<h2 class="section__header__title">一个认真工作的前端工程师的告白</h2>
 				<h3 class="section__header__subtitle"><script>document.write( (new Date).getFullYear() - 2013 );</script>年工作经验，编写艺术般的代码</h3>
 			</header>
 			<div class="section-body">
@@ -250,7 +250,7 @@
 						<img src="images/mzw_m.jpg" alt="拇指玩M站">
 					</div>
 				</section>
-        
+
       </div>
 		</div>
 	</section>
