--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <meta name="format-detection" content="telephone=no">
   <link href="css/style-v2.5.css" media="not print" rel="stylesheet" type="text/css">
   <link href="css/style-v2.5-print.css" media="print" rel="stylesheet" type="text/css">
+  <!--[if lt IE 9]>
+    <script>
+      !function(body){
+        body.style.width = body.style.height = '100%';
+        body.parentNode.style.overflow = body.style.overflow = 'hidden';
+      }(document.body);
+    </script>
+    <iframe src="4oie.html" frameborder="0" scrolling="no" style="position:absolute width: 100%; height: 100%; left: 0; top: 0; z-index:99999;"></iframe>
+  <![endif]-->
 </head>
 <body>
   <header class="header">
