--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         body.parentNode.style.overflow = body.style.overflow = 'hidden';
       }(document.body);
     </script>
-    <iframe src="4oie.html" frameborder="0" scrolling="no" style="position:absolute width: 100%; height: 100%; left: 0; top: 0; z-index:99999;"></iframe>
+    <iframe src="oldBrowser.html" frameborder="0" scrolling="no" style="position:absolute width: 100%; height: 100%; left: 0; top: 0; z-index:99999;"></iframe>
   <![endif]-->
 </head>
 <body>
