--- a/index.html
+++ b/index.html
@@ -313,5 +313,16 @@
 		</div>
 	</section>
   </div>
+  <footer class="footer">
+  	<div class="boundary clearfix">
+  		<div class="footer__qrcode clearfix">
+  			<img src="images/QRJason.png" alt="二维码" class="footer__qrcode__img">
+  			<p class="footer__qrcode__text content">您还可以使用手机或iPad<br>扫描左侧二维码打开本页</p>
+  		</div>
+  		<div class="footer__copyright content">
+  			<p>最后更新于2017年3月2日</p>
+  		</div>
+  	</div>
+  </footer>
 </body>
 </html>
