--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<a href="http://edu.hxsd.com/edunew/?utm_source=baidupz&utm_medium=brand&utm_content=logobt" target="_blank">
 							<img src="images/relogo.png" alt="火星时代实训基地" class="edu__logo">
 						</a>
-						<p class="content">2013年夏天在火星时代，互动媒体专业，学习web前端。在培训期间曾获以下奖项：</p>
+						<p class="content">2012年夏天在火星时代，互动媒体专业，学习web前端。在培训期间曾获以下奖项：</p>
 						<ul class="list content">
 							<li>考取了Adobe官方认证的网页设计制作证书，包含（photoshop,DW,flash,Ai,fireworks等）</li>
 						</ul>
@@ -115,7 +115,7 @@
 						<a href="http://www.bjrwdx.com/" target="_blank" class="not-for-print">
 							<img src="images/logo.png" alt="北京人文大学" class="edu__logo">
 						</a>
-						<p class="content">2008年9月至2012年6月在<strong>北京人文大学</strong>修读<strong>平面设计</strong>专业，通过<strong>英语专业</strong>考试，取得<strong>学士学位</strong>。</p>
+						<p class="content">2008年9月至2012年7月在<strong>北京人文大学</strong>修读<strong>平面设计</strong>专业，通过<strong>英语专业</strong>考试，取得<strong>学士学位</strong>。</p>
 					</div>
 				</div>
 			</div>
@@ -129,7 +129,7 @@
 			</header>
 			<div class="section-body">
 				<div class="work-exp-list">
-					<div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>现在</div>
+					<div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2017/7/9</div>
 					<section class="work-exp-list__company clearfix">
 						<header class="work-exp-list__company__header">
 							<a href="http://m.muzhiwan.com" target="_blank" class="work-exp-list__company__header__logo"><img src="images/index_header_logo.png" alt="北京拇指玩科技有限公司"></a>
@@ -139,7 +139,7 @@
 							<p class="work-exp-list__company__header__jobtitle">前端开发工程师</p>
 						</header>
 						<div class="work-exp-list__company__body content">
-							<p>前端负责人。<strong>搭建了前端的整体架构</strong>，包括：</p>
+							<p>前端负责人<strong>搭建了前端的整体架构</strong>，包括：</p>
 							<ul class="list">
 								<li>制定静态资源组织策略和代码发布流程；</li>
 								<li>选用webpack前端资源模块化管理和打包工具，将许多松散的模块按照依赖和规则打包成符合生产环境部署的前端资源,简化发布操作；</li>
