--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <title>蒋盛的个人简历 - 前端开发工程师/UI - Jason_webDesigner</title>
+  <title>蒋盛的个人简历 - 前端开发工程师 - Jason - weChart: niaochao215 -Tel: 15313080725 - </title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="keywords" content="前端,工程师,简历,求职,resume,job,web,frontend,html,html5,css,css3,javascript,nodejs,jraiser,bowljs">
   <meta name="description" content="蒋盛的个人简历,Jason_webDesigner">
@@ -31,9 +31,9 @@
   				<li class="header__address__item header__address__item-email"><script>
   					document.write( ['com', 'qq', '522310244'].reverse().join('.').replace('.', '@') );
   				</script></li>
-  				<li class="header__address__item header__address__item-blog">
+  				<!-- <li class="header__address__item header__address__item-blog">
   					<a class="button">个人博客正在搭建中....</a>
-  				</li>
+  				</li> -->
   			</ul>
   		</address>
   	</div>
@@ -42,7 +42,7 @@
     <section class="section">
 		  <div class="boundary">
 			<header class="section__header">
-				<h2 class="section__header__title">精通前端，略懂后端 <span style="font-size:13px;">(如有后端硬性需求，可忽略不计)</span></h2>
+				<h2 class="section__header__title">拥有一颗成为前端大牛的心</h2>
 				<h3 class="section__header__subtitle"><script>document.write( (new Date).getFullYear() - 2013 );</script>年工作经验，编写艺术般的代码</h3>
 			</header>
 			<div class="section-body">
@@ -89,7 +89,19 @@
 						</div>
 					</li>
 				</ul>
-			</div>
+        <div class="about-me">
+          <h6>Skill&Assessment</h6>
+          <ul>
+            <li>精通html+Css制作符合W3c标准的页面,兼容多浏览器。使用浏览器条件注释（if IE）区分浏览器或使用 Css Hacks技术来达成兼容。</li>
+            <li>熟悉标签语义，理解HTML5中对网页标签的语义强化,熟练掌握Css3中增强的功能。理解结构，样式和行为的分离。</li>
+            <li>对javascript自认为理解的还不错～，看完了《javascript高级程序设计》、《犀牛书》等，了解部分的设计模式。</li>
+            <li>熟练掌握渐进式JavaScript框架 VUE 1.0版本以及2.0版本，略懂 angular，基于vue制作安卓客户端内嵌积分商城</li>
+            <li>掌握绝大部分ES6新语法和API,实际开发中运用babel对新语法在构建过程中优雅降级兼容</li>
+            <li>曾任职过网页设计师岗位,对用户体验、交互设计、删格化设计有一定的见解</li>
+            <li>良好的学习能力,喜欢对自我不断完善,钻研问题,吸收同事的建议,以及知识。富有团队协作精神,能与团队成员充分配合,发挥自身优势。积极向上的工作状态与责任心,对自身工作能力有信心,且能够承受高强度的工作压力。</li>
+          </ul>
+        </div>
+      </div>
 		</div>
 	  </section>
     <section class="section">
@@ -99,9 +111,9 @@
 				<h3 class="section__header__subtitle">跨专业学习Web前端技术~这份热情你懂得</h3>
 			</header>
 			<div class="section-body clearfix">
-				<div class="edu edu-seniorschool not-for-print">
+				<div class="edu edu-seniorschool">
 					<div class="edu__body clearfix">
-						<a href="http://edu.hxsd.com/edunew/?utm_source=baidupz&utm_medium=brand&utm_content=logobt" target="_blank">
+						<a href="http://edu.hxsd.com/edunew/?utm_source=baidupz&utm_medium=brand&utm_content=logobt" target="_blank" class="not-for-print">
 							<img src="images/relogo.png" alt="火星时代实训基地" class="edu__logo">
 						</a>
 						<p class="content">2012年夏天在火星时代，互动媒体专业，学习web前端。在培训期间曾获以下奖项：</p>
@@ -115,7 +127,7 @@
 						<a href="http://www.bjrwdx.com/" target="_blank" class="not-for-print">
 							<img src="images/logo.png" alt="北京人文大学" class="edu__logo">
 						</a>
-						<p class="content">2008年9月至2012年7月在<strong>北京人文大学</strong>修读<strong>平面设计</strong>专业，通过<strong>英语专业</strong>考试，取得<strong>学士学位</strong>。</p>
+						<p class="content">2008年9月至2012年7月在<strong>北京人文大学</strong>修读<strong>平面设计</strong>专业。</p>
 					</div>
 				</div>
 			</div>
@@ -129,6 +141,26 @@
 			</header>
 			<div class="section-body">
 				<div class="work-exp-list">
+          <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>至今</div>
+          <section class="work-exp-list__company clearfix">
+            <header class="work-exp-list__company__header">
+							<a href="http://m.muzhiwan.com" target="_blank" class="work-exp-list__company__header__logo" style="background-color:rgba(6,4,44,1); height: 38px; padding: 10px; box-sizing: border-box;"><img src="https://fellowplus.com/data/dist/img/index_logo.png" alt="fellowPlus"></a>
+							<h4 class="work-exp-list__company__header__title">
+								<a style="color: rgba(6,4,44,1);" href="https://fellowplus.com/data/index.html#!/index" target="_blank">FellowPlus</a>
+							</h4>
+							<p class="work-exp-list__company__header__jobtitle">前端开发工程师</p>
+						</header>
+            <div class="work-exp-list__company__body content">
+              <ul class="list">
+                <li>迭代基于Vue开发的fellowPlusPC站点,提取出公共组件(列表，选项卡等),优化用户体验。</li>
+                <li>利用sass 以及 stylus 对css代码进行复用和管理,利用postCss对css中代码进行兼容管理</li>
+                <li>利用Echart对数据进行可视化图表展示。</li>
+                <li>重写移动端fellowPlus多个模块,优化用户体验。</li>
+                <li>利用git与同事协作管理与开发业务代码。</li>
+                <li>迭代IOS内嵌H5新闻模块，机构模块，并与IOS端通过jsBridge进行深度交互。</li>
+              </ul>
+            </div>
+          </section>
 					<div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2017/7/9</div>
 					<section class="work-exp-list__company clearfix">
 						<header class="work-exp-list__company__header">
@@ -197,6 +229,32 @@
 			</header>
 			<div class="section-body">
         <section class="project clearfix">
+          <div class="project__intro">
+						<header class="project__intro__header clearfix">
+							<h4 class="project__intro__header__title">FellowPlus</h4>
+							<ul class="tech-tag-list not-for-print">
+								<li class="tech-tag-list__item tech-tag-list__item-javascript">Javascript</li>
+								<li class="tech-tag-list__item tech-tag-list__item-nodejs">npm</li>
+                <li class="tech-tag-list__item tech-tag-list__item-webpack">webpack</li>
+							</ul>
+							<p class="project__intro__header__period">2017/7月至今</p>
+						</header>
+						<div class="content">
+							<p>选用vue1.0+router+browserify开发</p>
+              <p>由于只兼容高版本浏览器～正对IE内核的浏览器进行了用户引导</p>
+              <p>整合stylus预处理器和postcss实现编译阶段自动生产、压缩css文件并进行输出优化</p>
+              <p>使用gulp对HTML,JS,CSS进行压缩,混淆,构建,发布</p>
+              <p>利用Echarts对数据进行可视化图表制作</p>
+							<p class="project__intro__links not-for-print">
+								<a href="https://fellowplus.com/data/index.html#!/index" target="_blank">FellowPlus</a>
+							</p>
+						</div>
+					</div>
+          <div class="project__thumb not-for-print">
+						<img src="images/WechatIMG12.jpeg" alt="fellowPlus">
+					</div>
+        </section>
+        <section class="project clearfix">
 					<div class="project__intro">
 						<header class="project__intro__header clearfix">
 							<h4 class="project__intro__header__title">拇指玩PC端官方站点</h4>
@@ -232,7 +290,7 @@
 								<li class="tech-tag-list__item tech-tag-list__item-nodejs">npm</li>
                 <li class="tech-tag-list__item tech-tag-list__item-webpack">webpack</li>
 							</ul>
-							<p class="project__intro__header__period">2016/7 至今</p>
+							<p class="project__intro__header__period">2016/7月 - 2017/7月</p>
 						</header>
 						<div class="content">
 							<p>选用vue数据驱动组件作为界面数据渲染以及绑定</p>
@@ -258,7 +316,7 @@
                 <li class="tech-tag-list__item tech-tag-list__item-other">jQuery</li>
                 <li class="tech-tag-list__item tech-tag-list__item-other">artTemplate</li>
 							</ul>
-							<p class="project__intro__header__period">2015/5 至今</p>
+							<p class="project__intro__header__period">2015/5月 - 2017/7月</p>
 						</header>
 						<div class="content">
 							<p>选用常规的jQuery库开发</p>
