--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>蒋盛的个人简历 - 前端开发工程师 - Jason - weChart: niaochao215 -Tel: 15313080725 - </title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="keywords" content="前端,工程师,简历,求职,resume,job,web,frontend,html,html5,css,css3,javascript,nodejs,jraiser,bowljs">
-  <meta name="description" content="蒋盛的个人简历,Jason_webDesigner">
+  <meta name="description" content="蒋盛的个人简历,Jason_webDesigner gggg">
   <meta name="format-detection" content="telephone=no">
   <link href="css/style-v2.5.css" media="not print" rel="stylesheet" type="text/css">
   <link href="css/style-v2.5-print.css" media="print" rel="stylesheet" type="text/css">
