--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
   				<li class="header__address__item header__address__item-email"><script>
   					document.write( ['com', 'qq', '522310244'].reverse().join('.').replace('.', '@') );
   				</script></li>
-  				<!-- <li class="header__address__item header__address__item-blog">
-  					<a class="button">个人博客正在搭建中....</a>
-  				</li> -->
   			</ul>
   		</address>
     </div>
@@ -51,33 +48,33 @@
           <ul class="tech-skill-list">
             <li class="tech-skill-list__item tech-skill-list__item-javascript tech-skill-list__item--mastered">
               <h4 class="tech-skill-list__item__name">Javascript</h4>
-              <div class="tech-skill-list__item__detail not-for-print fade">
+              <!-- <div class="tech-skill-list__item__detail not-for-print fade">
                 <ul class="list content">
                   <li>熟练使用原生Javascript</li>
                   <li>能运用模块化、面向对象的方式编程；</li>
                   <li>掌握ES6、ES7等新语法</li>
                 </ul>
-              </div>
+              </div> -->
             </li>
             <li class="tech-skill-list__item tech-skill-list__item-html-and-css tech-skill-list__item--practised">
               <h4 class="tech-skill-list__item__name">HTML &amp; CSS</h4>
-              <div class="tech-skill-list__item__detail not-for-print fade">
+              <!-- <div class="tech-skill-list__item__detail not-for-print fade">
                 <ul class="list content">
                   <li>能使用合理的结构和样式编写兼容主流浏览器的页面；</li>
                   <li>能适当运用CSS 3使页面在现代浏览器上效果更佳；</li>
                   <li>能熟练运用移动端适配方案REM、VW；</li>
                   <li>能熟练使用Chrome调试工具、Fiddler等工具辅助开发。</li>
                 </ul>
-              </div>
+              </div> -->
             </li>
             <li class="tech-skill-list__item tech-skill-list__item-nodejs tech-skill-list__item-photoshop ">
               <h4 class="tech-skill-list__item__name">Node.js</h4>
-              <div class="tech-skill-list__item__detail not-for-print fade">
+              <!-- <div class="tech-skill-list__item__detail not-for-print fade">
                 <ul class="list content">
                   <li>熟悉命令行工具的开发；</li>
                   <li>熟悉基于Express的Web开发。</li>
                 </ul>
-              </div>
+              </div> -->
             </li>
             <!-- <li class="tech-skill-list__item tech-skill-list__item-photoshop">
               <h4 class="tech-skill-list__item__name">Photoshop</h4>
@@ -93,10 +90,10 @@
           <div class="about-me">
             <h6>自我介绍</h6>
             <ul>
-              <li>我是一名拥有5年前端开发经验的前端工程师，从只会切图的网页设计师一步步走到了合格的前端开发工程师，拥有使用Vue、支付宝小程序、微信小程序构建应用的经验。开发并负责的PC站点2个、移动端站点3个、支付宝小程序1个、微信小程序1个，
-                对于CSS3、html5、es6有相对深入的使用，阅读过vue框架相关源码对于Vue中数据响应、$nextTick、生命周期有一定了解，同时也阅读过axios源码，
+              <li>我是一名拥有5年前端开发经验的前端工程师，从只会切图的网页设计师一步步走到了称职的前端开发工程师，拥有使用Vue、支付宝小程序、微信小程序构建应用的经验。开发并负责的PC站点2个、移动端站点3个、支付宝小程序1个、微信小程序1个，
+                对于CSS3、html5、es6有相对深入的使用，阅读过Vue框架相关源码对于Vue中数据响应、$nextTick、生命周期有一定了解，同时也阅读过axios源码，
                 对于如何拦截请求响应并且修改请求参数修改响应数据和axios是如何用promise搭建基于xhr的异步桥梁有所了解，并且在封装小程序request过程中使用拦截器对请求数据进行加密。
-                对于小程序项目开发中阅读小程序官方组件库源码借鉴思路、规范进行相关组件设计有且不限于命名规范、严格组件传值类型等。对于node.js也有一些使用经验，</li>
+                对于小程序项目开发中阅读小程序官方组件库源码借鉴思路、规范进行相关组件设计有且不限于命名规范、严格组件传值类型等。对于node.js也有一些使用经验，基于hapi框架写过一些api。</li>
             </ul>
           </div>
         </div>
@@ -141,7 +138,7 @@
           <div class="work-exp-list">
 
             <!-- 2018.2 至 2020.5 -->
-            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2020/5</div>
+            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2018/1 - 2020/5</div>
             <section class="work-exp-list__company clearfix">
               <header class="work-exp-list__company__header">
                 <a href="http://m.muzhiwan.com" target="_blank" class="work-exp-list__company__header__logo" 
@@ -149,21 +146,22 @@
                   <img src="./images/123_2.jpg" alt="衣二三"></a>
                 <h4 class="work-exp-list__company__header__title">
                 <a 
-                style="color: rgba(6,4,44,1);" 
-                href="https://fellowplus.com/data/index.html#!/index" target="_blank">北京衣二三科技有限公司</a>
+                style="color: #ff544b" 
+                href="" target="_blank">北京衣二三科技有限公司</a>
 							</h4>
                 <p class="work-exp-list__company__header__jobtitle">前端开发工程师</p>
               </header>
               <div class="work-exp-list__company__body content">
                 <ul class="list">
-                  <li></li>
+                  <li>H5移动站点、微信小程序、支付宝小程序 -- 电商类型</li>
+                  <li>技术栈：Vue、Hapi、Ts、Weex、ES6、Css3</li>
                 </ul>
               </div>
             </section>
 
 
             <!-- 2018.7.10 至 2018年2月 公司倒闭 -->
-            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2018/2</div>
+            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2017/7 - 2018/2</div>
             <section class="work-exp-list__company clearfix">
               <header class="work-exp-list__company__header">
                 <a href="http://m.muzhiwan.com" target="_blank" class="work-exp-list__company__header__logo" 
@@ -176,18 +174,14 @@
               </header>
               <div class="work-exp-list__company__body content">
                 <ul class="list">
-                  <li>迭代基于Vue开发的fellowPlusPC站点,提取出公共组件(列表，选项卡等),优化用户体验。</li>
-                  <li>利用sass 以及 stylus 对css代码进行复用和管理,利用postCss对css中代码进行兼容管理</li>
-                  <li>利用Echart对数据进行可视化图表展示。</li>
-                  <li>重写移动端fellowPlus多个模块,优化用户体验。</li>
-                  <li>利用git与同事协作管理与开发业务代码。</li>
-                  <li>迭代IOS内嵌H5新闻模块，机构模块，并与IOS端通过jsBridge进行深度交互。</li>
+                  <li>pc站 -- 一级数据市场</li>
+                  <li>技术栈：Vue、Echart</li>
                 </ul>
               </div>
             </section>
 
             <!-- 2016.5.10 至 2017.7.9 -->
-            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2017/7/9</div>
+            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2015/5 - 2017/7</div>
             <section class="work-exp-list__company clearfix">
               <header class="work-exp-list__company__header">
                 <a href="http://m.muzhiwan.com" target="_blank" class="work-exp-list__company__header__logo"><img src="images/index_header_logo.png" alt="北京拇指玩科技有限公司"></a>
@@ -198,24 +192,19 @@
               </header>
               <div class="work-exp-list__company__body content">
                 <ul class="list">
-                  <li>选用webpack前端资源模块化管理和打包工具，将许多松散的模块按照依赖和规则打包成符合生产环境部署的前端资源,简化发布操作；</li>
-                  <li>选用Vue.js作为客户端积分商城的前端框架；</li>
-                  <li>实现基于微信JSSDK开发的活动页面，通过fiddler等抓包工具分析解决移动端遇到的疑难问题，利用css hack 解决浏览器兼容等问题</li>
-
-                  <!-- <li><strong>拇指玩移动站</strong>(请用移动终端打开)<a href="http://m.muzhiwan.com"style='color: #42ac52;'><strong>[传送门]</strong></a></li>
-                <li><strong>拇指玩积分商城</strong>(需下载拇指玩安卓客户端登录体验)<a href="http://xiazai.muzhiwan.com/mzw/Market_web_mobile.apk"style='color: #36be63;'><strong>[下载客户端]</strong></a></li>
-                <li><strong>拇指玩PC站点</strong>(暂时负责维护，后期会重新制作一版)<a href="http://www.muzhiwan.com"style='color: #36be63;'><strong>[传送门]</strong></a></li> -->
+                  <li>pc站 -- 安卓应用平台, h5 -- 积分商城 </li>
+                  <li>技术栈：Vue、JQ、artTemplate</li>
                 </ul>
               </div>
             </section>
 
             <!-- 2013.1 至 2015.5 -->
-            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2015/5</div>
+            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2013/2 - 2015/5</div>
             <section class="work-exp-list__company clearfix">
               <header class="work-exp-list__company__header">
                 <a href="http://www.china.com.cn/" target="_blank" class="work-exp-list__company__header__logo"><img src="images/logo.gif" alt="中国网"></a>
                 <h4 class="work-exp-list__company__header__title">
-								<a style="color: #f53638;" href="http://www.china.com.cn/" target="_blank">中国网</a>
+								<a style="color: #f53638;" href="http://www.china.com.cn/" target="_blank">中国网双拥中国</a>
 							</h4>
                 <p class="work-exp-list__company__header__jobtitle">网页设计师</p>
               </header>
@@ -226,7 +215,7 @@
             </section>
 
             <!-- 2012.7 至 2013.1 -->
-            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2013/1</div>
+            <!-- <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2013/1</div>
             <section class="work-exp-list__company clearfix">
               <header class="work-exp-list__company__header">
                 <h4 class="work-exp-list__company__header__title">
@@ -237,9 +226,7 @@
               <div class="work-exp-list__company__body content">
                 <p>负责淘宝店铺商品图设计，页面设计</p>
               </div>
-            </section>
-
-
+            </section> -->
           </div>
         </div>
       </div>
@@ -320,7 +307,7 @@
               </div>
             </div>
             <div class="project__thumb not-for-print">
-              <img src="./images/123_page_1.jpg" alt="fellowPlus" style="height: 400px; overflow: hidden; object-fit: cover;">
+              <img src="./images/wechat.png" alt="fellowPlus" style="height: 400px; overflow: hidden; object-fit: cover;">
             </div>
           </section>
 
@@ -346,7 +333,7 @@
               </div>
             </div>
             <div class="project__thumb not-for-print">
-              <img src="./images/123_page_1.jpg" alt="fellowPlus" style="height: 400px; overflow: hidden; object-fit: cover;">
+              <img src="./images/alipay.png" alt="fellowPlus" style="height: 400px; overflow: hidden; object-fit: cover;">
             </div>
           </section>
 
@@ -388,7 +375,7 @@
                   <li class="tech-tag-list__item tech-tag-list__item-nodejs">npm</li>
                   <li class="tech-tag-list__item tech-tag-list__item-webpack">webpack</li>
                 </ul>
-                <p class="project__intro__header__period">2017/5 至 2017/7</p>
+                <p class="project__intro__header__period">2015/5 至 2017/7</p>
               </header>
               <div class="content">
                 <p>选用常规jQuery库开发</p>
