修改邮箱地址

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <title>蒋盛的个人简历 - 前端开发工程师 - Jason - weChart: 15313080725 -Tel: 15313080725 - </title>
+  <title>蒋盛的个人简历 - 前端开发工程师 - Jason - weChart: 15313080725 - Tel: 15313080725 - Email: 15313080725@gmail.com </title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="keywords" content="前端,工程师,简历,求职,resume,job,web,frontend,html,html5,css,css3,javascript,nodejs,jraiser,bowljs">
   <meta name="description" content="蒋盛的个人简历,Jason_webDesigner gggg">
@@ -30,7 +30,7 @@
   					document.write( 'a5b2c2d3e1f0g2h4i4j'.replace(/\D/g, '') );
   				</script></li>
   				<li class="header__address__item header__address__item-email"><script>
-  					document.write( ['com', 'qq', '522310244'].reverse().join('.').replace('.', '@') );
+  					document.write( ['com', 'gmail', '15313080725'].reverse().join('.').replace('.', '@') );
   				</script></li>
   			</ul>
   		</address>
