新增加vue优势劣势说明

--- a/index.html
+++ b/index.html
@@ -269,8 +269,14 @@
                 <p>3、列表图片懒加载</p>
                 <p>4、sprite整个静态图片减少页面资源请求</p>
                 <p>5、全局注入stylus基础变量(主色调，index层级等)</p>
+                <p>vue框架优势/劣势:</p>
+                <p>1、监听数据变化异步修改DOM</p>
+                <p>2、双向数据绑定</p>
+                <p>3、template模板语法,注册阶段自动调用Vue.extend生成渲染函数</p>
+                <p>4、完整的生命周期钩子</p>
+                <p>劣势不能兼容IE8及一下,如果需要兼容IE8可选择</p>
                 <p class="project__intro__links not-for-print">
-                  <a href="https://www.95vintage.com/architecture/box" target="_blank">衣二三移动端</a>
+                  <a href="https://www.95vintage.com/architecture/" target="_blank">衣二三移动端</a>
                 </p>
               </div>
             </div>
