--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <p>2、双向数据绑定</p>
                 <p>3、template模板语法,注册阶段自动调用Vue.extend生成渲染函数</p>
                 <p>4、完整的生命周期钩子</p>
-                <p>劣势不能兼容IE8及一下,如果需要兼容IE8可选择</p>
+                <p>5、劣势不能兼容IE8及一下,原因数据监听过程中使用了defineProperty</p>
                 <p class="project__intro__links not-for-print">
                   <a href="https://www.95vintage.com/architecture/" target="_blank">衣二三移动端</a>
                 </p>
