--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <title>蒋盛的个人简历 - 前端开发工程师 - Jason - weChart: 15313080725 - Tel: 15313080725 - Email: 15313080725@gmail.com </title>
+  <title>蒋盛的个人简历 - 前端开发工程师 - Jason - weChart: 15313080725 - Tel: 15313080725 - Email: jiangsheng1209@gmail.com </title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="keywords" content="前端,工程师,简历,求职,resume,job,web,frontend,html,html5,css,css3,javascript,nodejs,jraiser,bowljs">
   <meta name="description" content="蒋盛的个人简历,Jason_webDesigner gggg">
