修改个人简历

--- a/index.html
+++ b/index.html
@@ -136,9 +136,30 @@
         </header>
         <div class="section-body">
           <div class="work-exp-list">
-
+            <!-- 2020.7 至 2020.10 -->
+            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2020/7/01 - 2020/09/27</div>
+            <section class="work-exp-list__company clearfix">
+              <header class="work-exp-list__company__header">
+                <a href="http://m.muzhiwan.com" target="_blank" class="work-exp-list__company__header__logo" 
+                style="background-color:#fff; box-sizing: border-box;">
+                  <img src="./images/123_2.jpg" alt="衣二三"></a>
+                <h4 class="work-exp-list__company__header__title">
+                <a 
+                style="color: #9735ffcc" 
+                href="" target="_blank">互影科技</a>
+							</h4>
+                <p class="work-exp-list__company__header__jobtitle">前端开发工程师</p>
+              </header>
+              <div class="work-exp-list__company__body content">
+                <ul class="list">
+                  <li>互动视频编辑器 -- toB类型</li>
+                  <li>技术栈：React、Antd</li>
+                </ul>
+              </div>
+            </section>
+            
             <!-- 2018.2 至 2020.5 -->
-            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2018/1 - 2020/5</div>
+            <div class="work-exp-list__point"><i class="work-exp-list__point__ico"></i>2018/1 - 2020/5/30</div>
             <section class="work-exp-list__company clearfix">
               <header class="work-exp-list__company__header">
                 <a href="http://m.muzhiwan.com" target="_blank" class="work-exp-list__company__header__logo" 
