--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <header class="work-exp-list__company__header">
                 <a href="http://m.muzhiwan.com" target="_blank" class="work-exp-list__company__header__logo" 
                 style="background-color:#fff; box-sizing: border-box;">
-                  <img src="./images/123_2.jpg" alt="衣二三"></a>
+                  <img src="./images/hykj.jpg" alt="衣二三"></a>
                 <h4 class="work-exp-list__company__header__title">
                 <a 
                 style="color: #9735ffcc" 
